[package]
name = "amiibo"
version = "0.1.0"
edition = "2024"
description = "Load AmiiboDB dumps onto a Chameleon Ultra"
license = "MIT"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serialport = "4.8.1"
strsim = "0.11.1"
unicode-normalization = "0.1.24"

[profile.release]
strip = true
lto = true
codegen-units = 1
